// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly expenses summary with multiple expenses 1`] = `
<div>
  <p>
    Expense Summary
  </p>
  <p>
    Viewing 
    4
     
    expenses
     totalling 
    $34,323.43
    .
  </p>
</div>
`;

exports[`should correctly expenses summary with one expense 1`] = `
<div>
  <p>
    Expense Summary
  </p>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
    .
  </p>
</div>
`;
